Bug 222097 - After entering a transaction, which involved the creation of a new payee, the wrong payee appears in the transaction
Summary: After entering a transaction, which involved the creation of a new payee, the...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Unspecified
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-10 18:54 UTC by Cristian Oneț
Modified: 2010-01-11 00:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2010-01-10 18:54:11 UTC
Version:            (using KDE 4.3.3)
Installed from:    Gentoo Packages

As the short description states here are the steps to reproduce this BUG:
1. Use the payee widget to create a new payee while entering the transaction
2. Enter the transaction
3. Observe that the entered payee is the first payee (in alphabetical order) not the newly created payee
Comment 1 Alvaro Soliverez 2010-01-11 00:45:42 UTC
SVN commit 1072795 by asoliverez:

Fixed the creation of new items, which broke at some point. Also added a method to make items non-selectable.

BUG:222097

 M  +15 -2     kmymoneymvccombo.cpp  
 M  +2 -0      kmymoneymvccombo.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1072795