Fixed the creation of new items, which broke at some point. Also added a method to make items non-selectable.

BUG:222097

svn path=/trunk/playground/office/kmymoney/; revision=1072795